v1.0.1
* Support for Mac OSX
* Support for Windows 32-bit builds
* Number of optimizations (cache control and readahead support for Win and *nix)
* Added vignetting correction framework (not enabled yet)
* Added one more SJ5000x FOV crop resolution support

v1.0.0
* Added GUI
* Fixed bug where output folder option would mess up filenames
* Slightly improved default SJ5000x white balance for daylight
* Fixed bug where we were missing every second file if folder had only raw files
* Added parallel processing
* Added smallest FOV resulution to SJ5000x support

v0.9.1
* Improved color calibration for both SJ5000x and M20
* Added SJ5000x Adobe camera profile using colorchecker
* Added experimental GUI
* Added untested MacOS support

v0.9.0
* Support SJ5000x Elite and M20
* Get EXIF metadata from JPEGs that correlate to the raw files
* Adobe SDK for maximum compatibility and extendability
* Support for output directory
* Convert to DNG or RAW
* Ability to disable color calibration for manual calibration
* Support for Windows and Linux
* Take into account lack of AA filter
* Allow list of individual files and folders as input