@@ -1,3 +1,5 @@
+* Added prune_raw utility to delete RAW/JPEG files that don't have a matching DNG file
+
 v1.0.1
 * Support for Mac OSX
 * Support for Windows 32-bit builds
